--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "use-debounce": "^10.0.1"
+    "use-debounce": "^10.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
